[package]
name = "kidex"
description = "A plugin to search files using the Kidex file indexing daemon"
repository = "https://github.com/anyrun-org/plugin-kidex"
homepage = "https://github.com/anyrun-org/plugin-kidex"
readme = "README.md"
license = "GPLv3"
version = "0.1.0"
edition = "2021"
author = ["Kirottu"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = "0.1.0"
kidex-common = { version = "0.1.0", features = ["util"] }
abi_stable = "0.11.1"
fuzzy-matcher = "0.3.7"
open = "3.2.0"
serde = { version = "1.0.160", features = ["derive"] }
ron = "0.8.0"
